--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 /* rewrite bootstrap */
 .container-fluid {
-    padding-right: 0px;
-    padding-left: 0px;
     margin-right: auto;
     margin-left: auto;
+    padding-right: 0px;
+    padding-left: 0px;
 }
 .carousel-control.left {
     background-image:linear-gradient(to right,rgba(131, 131, 131, 0.5) 0,rgba(0,0,0,.0001) 100%);
@@ -12,7 +12,10 @@
 .carousel-control.right{
     background-image:linear-gradient(to left,rgba(131, 131, 131, 0.5) 0,rgba(0,0,0,.0001) 100%);
 }
-
+.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+    padding-right: 0;
+    padding-left: 0;
+}
 /* 超小屏幕（手机，小于 768px） */
 @media (max-width: 968px) { 
     .slider,.slider .item .image{
@@ -57,18 +60,40 @@
         width: 1260px;
     }
 }
+/* common */
+/* 图片闪一下 */
+.img-flicker{
+    position:relative;overflow:hidden;
+}
+.img-flicker:after {
+    position:absolute;
+    top:0;
+    left:-160%;
+    z-index:2;
+    width:100px;
+    height:100%;
+    background-image:linear-gradient(90deg,hsla(0,0%,100%,0),hsla(0,0%,100%,.3) 50%,hsla(0,0%,100%,0));
+    content:"";
+    -webkit-transform:skewX(-25deg) translateZ(0);
+    transform:skewX(-25deg) translateZ(0);
+}
+.img-flicker:hover:after{left:160%;
+    transition:left 1s ease-in-out;
+}
 /* app */
 html,div,span,p,h1,h2,h3,h4,h5,h6{
-    padding:0px;
     margin: 0px;
+    padding:0px;
 }
 html {
     font-size: 18px;
 }
 body {
     padding-top: 50px;
+    background: #eeeeee;
 }
 ul,ol,li{
+    padding-left: 0;
     list-style: none;
 }
 
@@ -76,57 +101,102 @@ ul,ol,li{
     overflow: hidden;
 }
 .slider .item .image {
-    width: 100%;
     display: flex;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    background-position: center ;
-}
-
-.content {
-    padding-top: 2.6rem;
-}
-
-.article-list{
-    padding: 0;
-}
-.article-list .master-img{
     width: 100%;
-    padding-top: 58.88%;
+    background-position: center ;
+    background-size: 100% auto;
     background-repeat: no-repeat;
-    background-color: #eeeeee;
-    background-size: cover;
-    position: relative;
 }
-.article-list .article-item{
-    display: block;
-    overflow: hidden;
+
+/* 中间内容区 */
+.content {
+    margin-top: 2rem;
     margin-bottom: 2rem;
 }
-.article-list .article-item .more{
+/* 文章列表 */
+.article-list{
+    background: #ffffff;
+
+}
+/* 文章块 */
+.article-list .article-item {
+    display: block;
+    overflow: hidden;
+    padding: 0.666rem 1.666rem;
+    border-bottom: 2px dashed #eeeeee;
+}
+.article-list .article-item:hover{
+    border-bottom: 2px solid #eeeeee;
+}
+/* 文章标题 */
+.article-list .article-item .article-title {
+    position:relative;
+    overflow:hidden;
+    /* margin-bottom: 1rem; */
+    padding-top:1rem;
+    padding-bottom: 0.333rem;
+    width: 100%;
+    border-bottom: 2px solid #eeeeee;
+}
+.article-list .article-item .article-title h3{
+    padding-bottom: 0.666rem;
+}
+.article-list .article-item .article-title .article-auther{
+    color:#666666;
+}
+/* 文章标题滑动线 */
+.article-list .article-item .article-title:after {
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: #6bc30d;
+    content: "";
+    transition: width .2s;
+}
+.article-list .article-item:hover .article-title:after {
     width: 100%;
 }
-.article-list .article-item .article-text {
-    margin-top:1.2rem;
+/* 文章内容区 */
+.article-list .article-item .article-body{
+    overflow: hidden;
+    padding: 1rem 0;
+
 }
-.article-list .article-item .article-text section {
-    margin-top:0.8rem;
-    line-height: 1.6rem;
+/* 文章大图 */
+@media (min-width: 992px){
+    .article-list .article-item .article-body .article-img{
+        margin: 0 1rem 1rem 0;
+    }
+}
+.article-list .article-item .article-body .article-img .image{
+    position: relative;
+    overflow: hidden;
+    padding-top: 58.88%;
+    width: 100%;
+    background-color: #eeeeee;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+/* 文章部分文字 */
+.article-list .article-item .article-body .article-text {
+    margin-top:-0.3rem;
+    line-height: 1.566rem;
 }
 
+/* 页脚 */
 .footer{
+    padding: 2rem 0 1rem 0;
     background: #000;
     color:#999999;
-    padding: 2rem 0 1rem 0;
 }
 .footer h4 {
     padding-bottom: 1.6rem;
 }
 .footer-menu{
     padding-left: 0;
-    line-height: 1.6rem
+    line-height: 1.6rem;
 }
 
 /* 页脚二维码 */
