--- a/static/style.css
+++ b/static/style.css
@@ -91,6 +91,7 @@ html {
 body {
     padding-top: 50px;
     background: #eeeeee;
+    font-family: "Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,\\5FAE\8F6F\96C5\9ED1,Arial,sans-serif"
 }
 ul,ol,li{
     padding-left: 0;
@@ -125,6 +126,9 @@ ul,ol,li{
     padding: 0.666rem 1.666rem;
     border-bottom: 2px dashed #eeeeee;
 }
+.article-list .article-item:last-child{
+    border: 2px solid #eeeeee;
+}
 .article-list .article-item:hover{
     border-bottom: 2px solid #eeeeee;
 }
@@ -136,27 +140,56 @@ ul,ol,li{
     padding-top:1rem;
     padding-bottom: 0.333rem;
     width: 100%;
-    border-bottom: 2px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
 }
 .article-list .article-item .article-title h3{
+    padding-right:4.666rem;
+}
+.article-list .article-item .article-title h3 a,.article-list .article-item .article-title h3 a:visited{
     padding-bottom: 0.666rem;
+    color: #000;
+    text-decoration: none;
+}
+.article-list .article-item .article-title h3 a:hover,.article-list .article-item .article-title h3 a:active  {
+    color: #0366d6;
+    text-decoration: none;
+        
 }
 .article-list .article-item .article-title .article-auther{
+    padding:0.333rem 0;
     color:#666666;
 }
 /* 文章标题滑动线 */
 .article-list .article-item .article-title:after {
     position: absolute;
     bottom: 0px;
-    left: 0;
+    left: -1px;
     width: 0;
     height: 2px;
-    background-color: #6bc30d;
+    background-color: #f76a0c;
     content: "";
     transition: width .2s;
 }
 .article-list .article-item:hover .article-title:after {
     width: 100%;
+}
+
+.article-list .article-item .article-title .article-time{
+    position: absolute;
+    right:0;
+    top:1rem;
+}
+.article-list .article-item .article-title .article-time .article-time-day{
+    position: absolute;
+    left:-160%;
+    top:-26%;
+    font-size:2.333rem; 
+    color: #f76a0c;
+}
+.article-list .article-item .article-title .article-time .article-time-month,.article-time-year{
+    text-transform: uppercase;
+    display: block;
+    color:#b6bdcf;
 }
 /* 文章内容区 */
 .article-list .article-item .article-body{
